# z-pool-tool

./: .dockerignore  .env.mail  .env.samlple  .env.sample  .gitattributes  .gitignore  .gitlab-ci.yml  .npmrc  .ocamlformat  .ocamlformat-ignore  .yarnrc  .yarnrc.yml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  dune  dune-project  esy.json  index.html  notes  package.json  pool.opam  pool.opam.locked  pool.opam.template  textmsg.json
pool/app/archived_email/: archived_email.ml  archived_email.mli  dune  entity.ml  repo.ml
pool/app/authentication/: authentication.ml  authentication.mli  dune  entity.ml  event.ml  repo.ml
pool/app/contact/: contact.ml  contact.mli  dune  entity.ml  entity_guard.ml  event.ml  version_history.ml
pool/app/custom_field/: custom_field.ml  custom_field.mli  dune  entity.ml  entity_answer.ml  entity_group.ml  entity_guard.ml  event.ml  version_history.ml
pool/app/duplicate_contacts/: dune  duplicate_contacts.ml  duplicate_contacts.mli  entity.ml  entity_guard.ml  event.ml  repo.ml  repo_entity.ml  repo_merge.ml  service.ml
pool/app/email/: default.ml  dune  email.ml  email.mli  email_message.ml  email_service.ml  entity.ml  entity_guard.ml  entity_smtp.ml  event.ml  helper.ml  rabbitmq.ml
pool/app/experiment/: dune  entity.ml  entity_guard.ml  entity_location.ml  event.ml  experiment.ml  experiment.mli  repo.ml  statistics.ml
pool/app/filter/: dune  entity.ml  entity_guard.ml  entity_human.ml  event.ml  filter.ml  filter.mli  filter.txt  filter_utils.ml  version_history.ml
pool/app/message_history/: dune  entity.ml  message_history.ml  message_history.mli  repo.ml  repo_entity.ml
pool/app/message_template/: dune  entity.ml  entity_guard.ml  event.ml  message_template.ml  message_template.mli  message_utils.ml
pool/app/pool_common/: dune  entity.ml  entity_base_model.ml  entity_i18n.ml  entity_message.ml  entity_message_field.ml  pool_common.ml  pool_common.mli  pool_common_error.ml  pool_common_utils.ml  pool_common_utils.mli  repo.ml  utils_time.ml  utils_to_string.ml
pool/app/pool_location/: default.ml  dune  entity.ml  entity_address.ml  entity_file.ml  entity_file_mapping.ml  entity_guard.ml  entity_statistics.ml  event.ml  events.ml  pool_location.ml  pool_location.mli  repo.ml
pool/app/pool_tenant/: dune  entity.ml  entity_guard.ml  entity_logo_mapping.ml  entity_smtp.ml  entity_smtp_auth.ml  entity_text_message.ml  event.ml  pool_tenant.ml  pool_tenant.mli  pool_tenant_service.ml
pool/app/pool_user/: dune  entity.ml  entity_password.ml  entity_password.mli  event.ml  login_attempt_entity.ml  web.ml  (+7 more)
pool/core/: app.ml  cleaner.ml  command.ml  configuration.ml  container.ml  dune  lifecycle.ml  log.ml  random.ml  selector.ml  service.ml  time.ml  time.mli
pool/cqrs_command/: admin_command.ml  announcement_command.ml  api_key_command.ml  assignment_command.ml  common.ml  common_command.ml  contact_command.ml  custom_field_answer_command.ml  custom_field_command.ml  custom_field_group_command.ml  custom_field_option_command.ml  custom_field_settings_command.ml  custom_field_settingscommand.ml  dune  duplicate_contacts_command.ml  email_command.ml  experiment_command.ml  filter_command.ml  guardian_command.ml  i18n_command.ml  invitation_command.ml  location_command.ml  login_command.ml  mailing_command.ml  matcher_command.ml  message_template_command.ml  organisational_unit_command.ml  participant_command.ml  participation_command.ml  pool_tenant_command.ml  pool_tenant_command.mli  pool_version_command.ml  queue_command.ml  role_command.ml  root_command.ml  session_command.ml  settings_command.ml  smtp_command.ml  subject_command.ml  tags_command.ml  (+5 more)
pool/database/: caqti_encoders.ml  core.ml  database.ml  database.mli  database_migration.ml  dune  entity.ml  entity.mli  logger.ml  migration_tenant.ml  pools.ml  pools.mli  pools_guardian.ml  pools_sig.ml  repo.ml  repo_entity.ml  service.ml  service.mli
pool/database_test/: database_pools.ml  database_pools.mli  database_pools_sig.ml  database_test.ml  dune  entity.ml
pool/pool_event/: dune  pool_event.ml  pool_event.mli
pool/pool_model/: base.ml  dune  time.ml  time.mli
pool/pool_queue/: dune  entity.ml  entity_guard.ml  entity_mapping.ml  notifier.ml  pool_queue.ml  pool_queue.mli  repo.ml  repo_entity.ml  repo_mapping.ml
pool/queue/: dune  entity.ml  entity_guard.ml  entity_history.ml  notifier.ml  queue.ml  queue.mli  repo.ml  repo_entity.ml  repo_history.ml  service.ml
pool/run/: dune  run.ml
pool/seed/: dune  seed.ml  seed_assets.ml  seed_assignment.ml  seed_custom_fields.ml  seed_experiment.ml  seed_filter.ml  seed_gtx_api_key.ml  seed_guard.ml  seed_invitation.ml  seed_location.ml  seed_mailings.ml  seed_session.ml  seed_settings.ml  seed_smtp.ml  seed_tenant.ml  seed_timewindow.ml  seed_user.ml  seed_user_data.json  seed_waiting_list.ml
pool/test/: admin_role_assignment.ml  announcement_test.ml  api_key_test.ml  assignment_job_test.ml  assignment_test.ml  assignments_filter_test.ml  authorization_lists_test.ml  authorization_test.ml  changelog_test.ml  command.ml  command_lwt_tests.ml  command_tests.ml  common_test.ml  contact_counter_test.ml  contact_job_test.ml  contact_test.ml  custom_field_test.ml  custom_field_utils.ml  database_test.ml  dune  duplicate_contacts_test.ml  experiment_filter_test.ml  experiment_test.ml  filter_assignment_tests.ml  filter_assignment_tests.mli  filter_invitation_tests.ml  filter_invitation_tests.mli  filter_invitation_uninvited_tests.ml  filter_test.ml  i18n_test.ml  integration.ml  integration_utils.ml  invitation_test.ml  location_test.ml  mailing_test.ml  matcher_test.ml  message_history.ml  message_mapping.ml  message_template_test.ml  organisational_unit_test.ml  (+24 more)
pool/webserver/: dune  session.ml  web.ml  web_csrf.ml  web_flash.ml  web_http.ml  web_id.ml  web_session.ml  web_static.ml  webserver.ml
worker-src/: README.md  pyproject.toml
worker-src/api/: main.py
worker-src/pool_worker/: celery_app.py  send_mail.py
worker-src/utils/: rabbitmq.py
worker-src/worker/: email_worker.py
(+1290 files in other folders)
