[tool.poetry]
name = "pool-worker"
version = "0.1.0"
description = "Z-Pool-Tool worker"
authors = ["Marc Biedermann <it@econ.uzh.ch>"]

[tool.poetry.dependencies]
python = "^3.12"

Flask = "^3.1.0"
pika = "^1.3.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
bandit = "^1.7.9"
djlint = "^1.35.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = []

[tool.ruff.lint]
extend-select = ["I"]

[tool.bandit]
exclude_dirs = [".venv", "tests", "pool"]

[tool.djlint]
ignore = "H030,H031,T003"
max_blank_lines = 1
indent = 2
extension = "html.j2"
profile = "jinja"
