[tool.poetry]
name = "pool-worker"
version = "0.1.0"
description = "Z-Pool-Tool worker"
authors = ["Marc Biedermann <it@econ.uzh.ch>"]

[tool.poetry.dependencies]
python = "^3.12"

pika = "^1.3.2"
celery = "^5.4.0"
jsonschema = "^4.17.3"
flower = "^2.0.1"
sqlalchemy = "^2.0.39"
cryptography = "^44.0.2"
python-dotenv = "^1.1.0"
mysqlclient = "^2.2.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
bandit = "^1.7.9"
djlint = "^1.35.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = []

[tool.ruff.lint]
extend-select = ["I"]

[tool.bandit]
exclude_dirs = [".venv", "tests", "pool"]

[tool.djlint]
ignore = "H030,H031,T003"
max_blank_lines = 1
indent = 2
extension = "html.j2"
profile = "jinja"
