(library
 (name pool_core)
 (public_name pool.core)
 ; Code extracted from the Sihl framework; keep close to upstream by relaxing
 ; the fragile-match (4) and name-out-of-scope (40, 41) warnings.
 (flags
  (:standard -w +A-4-40-41-42-44-45-48-66-70 -warn-error +A-3))
 (libraries
  base64
  conformist
  containers
  dune-build-info
  fmt
  fmt.tty
  logs
  logs.fmt
  lwt
  lwt.unix
  mtime
  mtime.clock.os
  ptime
  ptime.clock.os
  tsort)
 (preprocess
  (pps lwt_ppx ppx_deriving.eq ppx_deriving.show)))
