(library
 (name cqrs_command)
 (libraries
  admin
  conformist
  custom_field
  contact
  database
  email
  experiment
  guard
  i18n
  pool_common
  pool_event
  pool_location
  pool_tenant
  pool_user
  role
  root
  session
  settings
  sihl
  tenant)
 (preprocess
  (pps
   ppx_here
   lwt_ppx
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.show
   ppx_sexp_conv
   ppx_variants_conv
   ppx_yojson_conv)))
