(library
 (name cqrs_command)
 (libraries
  admin
  conformist
  custom_field
  contact
  contact_counter
  email
  experiment
  filter
  guard
  i18n
  organisational_unit
  pool_common
  pool_database
  pool_event
  pool_location
  pool_tenant
  pool_user
  role
  session
  settings
  sihl
  system_event
  tags
  tenant
  user_import)
 (preprocess
  (pps
   ppx_here
   lwt_ppx
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.show
   ppx_sexp_conv
   ppx_variants_conv
   ppx_yojson_conv)))
