(library
 (name cqrs_command)
 (libraries
  admin
  announcement
  api_key
  assignment_job
  conformist
  contact
  custom_field
  contact_counter
  email
  experiment
  filter
  guard
  gtx_sender
  i18n
  organisational_unit
  pool_common
  pool_database
  pool_event
  pool_location
  pool_tenant
  pool_user
  pool_version
  role
  session
  settings
  sihl
  system_event
  tags
  time_window
  user_import)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.show
   ppx_sexp_conv
   ppx_variants_conv
   ppx_yojson_conv)))
