(library
 (name database)
 (libraries
  admin
  conformist
  contact
  email
  experiment
  i18n
  invitation
  logger
  mailing
  message_template
  pool_location
  pool_user
  service
  session
  sihl
  tenant
  utils
  waiting_list)
 (preprocess
  (pps lwt_ppx ppx_deriving.eq ppx_deriving.show ppx_yojson_conv)))

(include_subdirs unqualified)
