(library
 ; Cannot just be named as "event" because there is an existing stdlib module
 (name pool_event)
 (libraries
  admin
  assignment
  contact
  database
  email
  experiment
  i18n
  pool_tenant
  pool_user
  root
  settings
  sihl
  tenant
  waiting_list)
 (preprocess
  (pps ppx_deriving.eq ppx_deriving.show)))
