(library
 ; Cannot just be named as "event" because there is an existing stdlib module
 (name pool_event)
 (libraries
  admin
  assignment
  contact
  custom_field
  email
  experiment
  filter
  guard
  i18n
  invitation
  mailing
  message_template
  organisational_unit
  pool_database
  pool_location
  pool_tenant
  pool_user
  settings
  sihl
  system_event
  tags
  user_import
  waiting_list
  logger)
 (preprocess
  (pps ppx_deriving.eq ppx_deriving.show ppx_string ppx_variants_conv)))
