(library
 (name queue)
 (libraries
  canary
  containers
  database
  pool_database
  pool_tenant
  schedule
  service
  sihl
  utils)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_sexp_conv
   ppx_variants_conv
   ppx_yojson_conv)))

(include_subdirs unqualified)
