(library
 (name seed)
 (libraries
  admin
  assignment
  conformist
  contact
  email
  experiment
  gtx_config
  i18n
  invitation
  logger
  mailing
  message_template
  organisational_unit
  pool_event
  pool_location
  pool_user
  session
  settings
  sihl
  sihl-storage
  utils
  waiting_list)
 (preprocess
  (pps lwt_ppx ppx_deriving.eq ppx_deriving.show ppx_yojson_conv)))

(include_subdirs unqualified)
