(tests
 (names command integration filter_invitation_tests filter_assignment_tests)
 (libraries
  admin
  alcotest
  alcotest-lwt
  assignment
  caqti-driver-mariadb
  contact
  contact_counter
  cqrs_command
  custom_field
  experiment
  guard
  handler
  http_utils
  invitation
  matcher
  pool_database
  pool_event
  pool_location
  pool_tenant
  reminder
  seed
  tags
  tenant
  user_import
  utils
  waiting_list)
 (preprocess
  (pps lwt_ppx ppx_deriving.eq ppx_deriving.show)))

(include_subdirs unqualified)
