(tests
 (names
  command
  integration
  filter_invitation_tests
  filter_assignment_tests
  password_reset_test
  pool_user_test
  pool_token_test)
 (libraries
  admin
  api_key
  alcotest
  alcotest-lwt
  assignment
  caqti-driver-mariadb
  changelog
  contact
  contact_counter
  cqrs_command
  custom_field
  database
  experiment
  guard
  handler
  http_utils
  invitation
  matcher
  pool_database
  pool_event
  pool_location
  pool_tenant
  reminder
  seed
  tags
  user_import
  utils
  waiting_list)
 (preprocess
  (pps lwt_ppx ppx_deriving.eq ppx_deriving.show ppx_string)))

(include_subdirs unqualified)

(env
 (_
  (env-vars
   (SIHL_ENV "test")
   (TEST_MAIL "test@econ.uzh.ch"))))
