(tests
 (names
  command
  integration
  filter_invitation_tests
  filter_assignment_tests
  password_reset_test
  pool_user_test
  pool_token_test)
 (libraries
  admin
  api_key
  alcotest
  alcotest-lwt
  assignment
  caqti-driver-mariadb
  changelog
  contact
  contact_counter
  contact_job
  cqrs_command
  custom_field
  database
  experiment
  guard
  handler
  http_utils
  invitation
  layout
  matcher
  pool_database
  pool_event
  pool_location
  pool_tenant
  reminder
  seed
  tags
  user_import
  utils
  waiting_list)
 (preprocess
  (pps lwt_ppx ppx_deriving.eq ppx_deriving.show ppx_string)))

(include_subdirs unqualified)

; TZ is pinned to a zone that matches neither UTC nor Europe/Zurich on purpose:
; timestamp handling must not depend on the host's timezone, so any code that
; leaks Unix.localtime/host-TZ into parsing, storage or display fails the suite.

(env
 (_
  (env-vars
   (SIHL_ENV "test")
   (TZ "America/New_York")
   (TEST_MAIL "test@econ.uzh.ch"))))
