(library
 (name archived_email)
 (libraries pool_common pool_user utils)
 (preprocess
  (pps
   lwt_ppx
   ppx_string
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_fields_conv
   ppx_sexp_conv
   ppx_variants_conv
   ppx_yojson_conv)))

(include_subdirs unqualified)
