(library
 (name authentication)
 (libraries pool_common pool_user)
 (preprocess
  (pps
   lwt_ppx
   ppx_fields_conv
   ppx_variants_conv
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_sexp_conv
   ppx_string
   ppx_yojson_conv)))

(include_subdirs unqualified)
