(library
 (name contact)
 (libraries
  custom_field
  email
  pool_common
  pool_user
  ptime
  role
  service
  settings
  sihl
  sihl-user
  utils)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.show
   ppx_sexp_conv
   ppx_variants_conv
   ppx_yojson_conv)))

(include_subdirs unqualified)
