(library
 (name contact)
 (libraries
  changelog
  i18n
  guard
  pool_common
  pool_user
  ptime
  role
  settings
  schedule
  sihl
  utils
  query)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_fields_conv
   ppx_sexp_conv
   ppx_string
   ppx_variants_conv
   ppx_yojson_conv)))

(include_subdirs unqualified)
