(library
 (name custom_field)
 (libraries
  changelog
  contact
  guardian
  guard
  pool_common
  pool_context
  ptime
  role
  settings
  sihl
  utils)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_sexp_conv
   ppx_string
   ppx_variants_conv
   ppx_yojson_conv)))

(include_subdirs unqualified)
