(library
 (name duplicate_contacts)
 (libraries guard custom_field pool_common contact utils query)
 (preprocess
  (pps
   lwt_ppx
   ppx_string
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_fields_conv
   ppx_sexp_conv
   ppx_variants_conv
   ppx_yojson_conv)))

(include_subdirs unqualified)
