(library
 (name email)
 (libraries
  database
  i18n
  pool.conformist
  pool_common
  pool_tenant
  pool_token
  pool_user
  queue
  query
  sihl-email
  utils)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_fields_conv
   ppx_sexp_conv
   ppx_variants_conv
   ppx_yojson_conv)))

(include_subdirs unqualified)
