(library
 (name email)
 (inline_tests)
 (libraries
  database
  i18n
  letters
  pool.conformist
  pool_common
  pool_tenant
  pool_token
  pool_user
  pool_queue
  query
  pool_core
  sexplib0
  utils)
 (preprocess
  (pps
   lwt_ppx
   ppx_inline_test
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_fields_conv
   ppx_sexp_conv
   ppx_variants_conv
   ppx_yojson_conv)))

(include_subdirs unqualified)
