(library
 (name experiment)
 (libraries
  contact
  email
  filter
  guard
  organisational_unit
  pool_common
  query
  sihl)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_fields_conv
   ppx_sexp_conv
   ppx_variants_conv
   ppx_yojson_conv)))

(include_subdirs unqualified)
