(library
 (name filter)
 (libraries
  contact
  custom_field
  pool_database
  pool_common
  pool_tenant
  tags
  utils
  ppx_deriving_yojson.runtime
  guard)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.show
   ppx_variants_conv
   ppx_yojson_conv)))

(include_subdirs unqualified)
