(library
 (name message_history)
 (libraries canary containers pool_database pool_common query sihl utils)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_fields_conv
   ppx_sexp_conv
   ppx_variants_conv
   ppx_yojson_conv)))

(include_subdirs unqualified)
