(library
 (name message_template)
 (libraries
  assignment
  contact
  email
  pool_common
  pool_tenant
  pool_user
  session
  settings
  signup_code
  text_message
  utils)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving.eq
   ppx_deriving.show
   ppx_variants_conv
   ppx_yojson_conv)))

(include_subdirs unqualified)
