(library
 ; Cannot just be named as "common" because there is a module common in caqti-driver-mariadb
 (name pool_common)
 (libraries
  database
  pool.conformist
  pool.message
  pool.model
  service
  sihl
  utils)
 (preprocess
  (pps
   lwt_ppx
   ppx_string
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_inline_test
   ppx_sexp_conv
   ppx_variants_conv
   ppx_yojson_conv)))

(include_subdirs unqualified)
