(library
 ; Cannot just be named as "location" because there is a module location
 (name pool_location)
 (libraries
  admin
  guard
  pool_common
  pool_database
  pool_tenant
  service
  query
  sihl
  utils)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_sexp_conv
   ppx_variants_conv
   ppx_yojson_conv)))

(include_subdirs unqualified)
