(library
 ; Cannot just be named as "location" because there is a module location
 (name pool_location)
 (libraries
  admin
  changelog
  guard
  pool_common
  pool_tenant
  storage
  query
  sihl
  utils)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_fields_conv
   ppx_sexp_conv
   ppx_variants_conv
   ppx_yojson_conv)))

(include_subdirs unqualified)
