(library
 (name pool_tenant)
 (libraries
  conformist
  guard
  pool_common
  pool_database
  pool_user
  settings
  sihl
  sihl-user
  utils)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_sexp_conv
   ppx_yojson_conv)))

(include_subdirs unqualified)
