(library
 (name pool_tenant)
 (libraries
  conformist
  guard
  pool_common
  database
  pool_user
  settings
  sihl
  utils)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_fields_conv
   ppx_sexp_conv
   ppx_string
   ppx_yojson_conv)))

(include_subdirs unqualified)
