(library
 (name pool_user)
 (libraries
  conformist
  containers
  pool_common
  pool_database
  pool_token
  ptime
  service
  settings
  sihl
  utils)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_string
   ppx_variants_conv
   ppx_yojson_conv)))

(include_subdirs unqualified)
