(library
 (name pool_user)
 (libraries
  conformist
  containers
  pool_common
  pool_database
  pool_token
  ptime
  settings
  sihl
  utils)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.make
   ppx_deriving.ord
   ppx_deriving.show
   ppx_fields_conv
   ppx_sexp_conv
   ppx_string
   ppx_yojson_conv)))

(include_subdirs unqualified)
