(library
 (name reminder)
 (libraries
  assignment
  message_template
  utils
  pool_common
  pool_event
  pool_core)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.show
   ppx_sexp_conv
   ppx_variants_conv
   ppx_yojson_conv)))

(include_subdirs unqualified)
