(library
 (name settings)
 (libraries
  changelog
  conformist
  guard
  letters
  pool_common
  ppx_deriving_yojson.runtime
  sihl
  utils)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving.eq
   ppx_deriving.show
   ppx_string
   ppx_variants_conv
   ppx_yojson_conv)))

(include_subdirs unqualified)
